Add inteface